--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Hello</h1>
-        <h2>Look at all the cool stuff we have done</h2>
+        <h2>Look at all the cool stuff we have done.</h2>
     </header>
 </body>
 </html>
